--- a/fastapi_project/.env
+++ b/fastapi_project/.env
@@ -1,5 +1,5 @@
-DATABASE_URL = "postgresql://postgres:postgres@localhost:5432/chatbot"
-JWT_SECRET = "732ed8e2-acab-4f29-a2c8-0c780c5d9fac"
+DATABASE_URL = "your database-url"
+JWT_SECRET = "your jwt-secret"
 JWT_ALGORITHM = "HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES = 43200  # 30 days
-API_KEY = "8A6AK95-BHBM0ZK-M110B25-T8EEW19"
+API_KEY = "your api-key"
